cover local case in integration test